oop_mro/tests/trybuild/fail_virtual_static_method.rs
use oop_mro::prelude::*;

oop_class! {
    class Utility {
        virtual fn make() -> usize {
            1
        }
    }
}

fn main() {}
